testdata/corset/invalid/permute_invalid_11.lisp
;;error:3:22-27:recursive definition
(defcolumns (X :i16))
(defpermutation (Y) ((+ Y)))
